fix: repository url change; fix layout example css bug;

--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -18,7 +18,7 @@
   }
 
   &-has-aside {
-    flex-direction: row;
+    flex-direction: row !important;
 
     & .hit-ui-layout {
       flex-direction: column;
