feat: scroll component add setTimeout bar visible

--- a/lib/scroll/scroll.scss
+++ b/lib/scroll/scroll.scss
@@ -9,6 +9,10 @@
     right: -14px;
     bottom: 0;
     overflow: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &-track {
